# libfat16

./: CMakeLists.txt
examples/: extract.cpp
include/fat/: fat.h
src/: fat.cpp  fat16.cpp
